--- a/views/results.hbs
+++ b/views/results.hbs
@@ -1,6 +1,5 @@
-{{>header}}
+{{>header}}  <title>Results Page</title>
 
-<title>Results Page</title>
 <h1 id="center"> Here are some options we think might be helpful  </h1>
 
 
