--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,4 @@
-{{>header}}
-
-<title>Home page</title>
+{{>header}} <title>Mental Health ChatBot</title>
 
 <div class="container-fluid text-center" id="cover">
   <h1>Mental Health Awareness</h1>
